--- a/spring-di/pom.xml
+++ b/spring-di/pom.xml
@@ -1,44 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>io.khwj.example</groupId>
+		<artifactId>mapstruct</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
-	<groupId>io.khwj.example</groupId>
-	<artifactId>mapstruct</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>MapStruct Examples</name>
-	<description>Guide to MapStruct in Java Examples</description>
-	<packaging>pom</packaging>
-
-	<properties>
-		<java.version>11</java.version>
-		<mapstruct.version>1.4.1.Final</mapstruct.version>
-		<lombok.version>1.18.16</lombok.version>
-		<junit.version>5.7.0</junit.version>
-		<springframework.version>2.4.0</springframework.version>
-	</properties>
-
-	<modules>
-		<module>basic</module>
-		<module>different-source</module>
-		<module>child-entities</module>
-		<module>spring-di</module>
-	</modules>
+	<artifactId>mapstruct-spring-di</artifactId>
+	<name>Dependency Injection - Spring DI</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct</artifactId>
-			<version>${mapstruct.version}</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<optional>true</optional>
-			<version>${lombok.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -46,9 +25,9 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>org.junit</groupId>
-				<artifactId>junit-bom</artifactId>
-				<version>${junit.version}</version>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-parent</artifactId>
+				<version>${springframework.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -57,6 +36,10 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
