--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>different-source</module>
 		<module>child-entities</module>
 		<module>spring-di</module>
+		<module>java-cdi</module>
 	</modules>
 
 	<dependencies>
