Add Default Values and Java Expressions examples

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<module>datatypes</module>
 		<module>custom-methods</module>
 		<module>custom-mappers</module>
+		<module>default-values</module>
+		<module>expressions</module>
 	</modules>
 
 	<dependencies>
